# torosamy_huffman_compressor

./: .gitignore  CMakeLists.txt  README.md  install.sh  package.sh  run.sh
example/: CMakeLists.txt  main.cpp  run.sh
include/: AuthorInfo.h  Huffman.h  HuffmanCompressor.h  HuffmanDecompressor.h
src/: AuthorInfo.cpp  Huffman.cpp  HuffmanCompressor.cpp  HuffmanDecompressor.cpp
